pkl-core/src/test/files/LanguageSnippetTests/input/errors/abstractMethodNotImplemented1.pkl
abstract class AbstractMethod {
  abstract function foo(): Int
}

class MyClass extends AbstractMethod {
}

foo: MyClass

